[project]
name = "pinster"
version = "0.1.0"
description = "Hitster CLI clone"
readme = "README.md"
authors = [{ name = "Michał Pindel", email = "m.pindel7991@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["python-json-logger>=3.2.1", "typer>=0.15.1"]

[project.scripts]
pinster = "pinster.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pre-commit>=4.1.0"]

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff.lint]
ignore = [
    # from https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "E501",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    # custom
    "ANN204",
]
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"
